--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -25,7 +25,7 @@
 
 <body>
 
-	<!--navigation top of page, for ease of use-->
+	<!--navigation top of page, for ease of use. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_topnav.asp-->
     <nav class="topnav">
 		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
@@ -63,6 +63,10 @@
 			<br>
 </div>
 		</div>
+
+        <br>
+
+        <!--Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_slideshow.asp-->
 
 		<div class="slideshow-container">
 
@@ -102,7 +106,7 @@
 
 					<br>
 
-					<!--Bottom navigation, for user flexibility-->
+					<!--Bottom navigation, for user flexibility. Code adapted from WS3 Schools - https://www.w3schools.com/howto/howto_css_dropup.asp-->
                     <section class="bottom-nav">
 						<h6>Explore our trails</h6>
 						<div class="dropup">
@@ -122,7 +126,7 @@
 
 					<br>
 
-					<!--Scroll back to top button-->
+					<!--Scroll back to top button. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
                     <div>
 						<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 					</div>
@@ -142,7 +146,8 @@
 					<!--end of footer-->
 
 					<script>
-						//create locations variable& assigns latitude& longitude to trail
+                        //create locations variable& assigns latitude& longitude to trail
+                        //Code adapted from google developer documentation - https://developers.google.com/maps/documentation
 						var locations = [
                         ["Cheddar Gorge", 51.2863881, -2.7690326, 1]
                     ];
