--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-	<!--Navigation, fixed at the top of page for ease of use-->
+	<!--Navigation, fixed at the top of page for ease of use. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_topnav.asp-->
     <nav class="topnav">
 		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
@@ -62,6 +62,10 @@
 			<br>
 </div>
 		</div>
+
+        <br>
+
+        <!--Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_slideshow.asp-->
 
 		<div class="slideshow-container">
 
@@ -130,7 +134,7 @@
 
         <br>
 
-		<!--Bottom navigation, for user flexibility to access different pages -->
+		<!--Bottom navigation, for user flexibility to access different pages. Code adapted from WS3 Schools - https://www.w3schools.com/howto/howto_css_dropup.asp -->
         <section class="bottom-nav">
 			<h6>Our trails</h6>
 			<div class="dropup">
@@ -149,7 +153,7 @@
 
 		<br>
 
-		<!--Scroll back to top button, add ease of use for user-->
+		<!--Scroll back to top button, add ease of use for user. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
         <div>
 			<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 		</div>
@@ -170,7 +174,7 @@
 
 		<!--Scripts-->
 		<script>
-			//create variable locations, add latitude& longitude to each trail
+            //create variable locations, add latitude& longitude to each trail. Code adapted from google developer documentation - https://developers.google.com/maps/documentation
 			var locations = [
       ["Exmoor National Park", 51.040565, -3.5551257, 4],
       ["Somerset Coastal Path", 51.2072165, -3.4641482, 5],
