--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
 	<title>Somerset Trails</title>
 
-    	<!--Favicon 32x32-->
+	<!--Favicon 32x32-->
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
-	
-    <!--Favicon 16x16, site icon-->
+
+	<!--Favicon 16x16, site icon-->
 	<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
 </head>
 
 <body>
 
 	<!--Navigation, fixed at the top of page for ease of use. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_topnav.asp-->
-    <nav class="topnav">
+	<nav class="topnav">
 		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
 			<button class="dropbtn">Somerset Trails
@@ -41,21 +41,21 @@
 		</div>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	</nav>
-    <!--end of navigation-->
+	<!--end of navigation-->
 
 	<!--cover picture, welcomes user to page-->
-    <section class="banner">
+	<section class="banner">
 		<div class="banner-outer">
 			<br>
 			<h4>Explore the best trails one step at a time</h4>
 		</div>
 	</section>
-    <!--end of banner-->
+	<!--end of banner-->
 
 	<br>
 
 	<!--Slideshow section, display each trail with corresponding button so the user to access that page instantly-->
-    <div class="container">
+	<div class="container">
 		<div>
 			<br>
 			<h2>Explore the trails below</h2>
@@ -63,9 +63,9 @@
 </div>
 		</div>
 
-        <br>
+		<br>
 
-        <!--Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_slideshow.asp-->
+		<!--Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_slideshow.asp-->
 
 		<div class="slideshow-container">
 
@@ -119,7 +119,7 @@
 			<span class="dot"></span>
 			<span class="dot"></span>
 		</div>
-        <!--end of slideshow-->
+		<!--end of slideshow-->
 
 		<br>
 
@@ -127,15 +127,15 @@
 		<section>
 			<h2>Somerset Map</h2>
 			<br>
-			<div class="map-custom">
+			<div class="home-map-custom">
 			</div>
 		</section>
-        <!--end of map section-->
+		<!--end of map section-->
 
-        <br>
+		<br>
 
 		<!--Bottom navigation, for user flexibility to access different pages. Code adapted from WS3 Schools - https://www.w3schools.com/howto/howto_css_dropup.asp -->
-        <section class="bottom-nav">
+		<section class="bottom-nav">
 			<h6>Our trails</h6>
 			<div class="dropup">
 				<button class="dropbtn">Explore</button>
@@ -149,66 +149,30 @@
 			</div>
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 		</section>
-        <!--end of bottom navigation-->
+		<!--end of bottom navigation-->
 
 		<br>
 
 		<!--Scroll back to top button, add ease of use for user. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
-        <div>
+		<div>
 			<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 		</div>
-        <!--end of scroll button-->
+		<!--end of scroll button-->
 
 		<!--Footer section, display social media& informs viewer they have reached end of page-->
-        <footer class="footer">
+		<footer class="footer">
 			<div class="align-vertically">
 				<span class="pr-4 ml-auto"><img title="Somerset Trails" class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths"></span>
-                <span class="pr-4-ml-auto"><a href="index.html" title="Home">Home</a></span>
+				<span class="pr-4-ml-auto"><a href="index.html" title="Home">Home</a></span>
 				<span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
 						rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
 				<span class="pr-4 ml-auto"><a href="https://twitter.com/explore" title="Twitter" target="_blank"
 						rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
 			</div>
 		</footer>
-        <!--end of footer-->
+		<!--end of footer-->
 
-		<!--Scripts-->
-		<script>
-            //create variable locations, add latitude& longitude to each trail. Code adapted from google developer documentation - https://developers.google.com/maps/documentation
-			var locations = [
-      ["Exmoor National Park", 51.040565, -3.5551257, 4],
-      ["Somerset Coastal Path", 51.2072165, -3.4641482, 5],
-      ["Staple Hill", 50.9445268, -3.0913381, 3],
-      ["Blagdon Lake", 51.3348101, -2.7040838, 2],
-      ["Cheddar Gorge", 51.2863881, -2.7690326, 1]
-    ];
-			var map;
-            //create map object, call id map and add elements to map object such as latitude& longitude
-      function initMap() {
-map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
-          center: {lat: 51.180000, lng: -3.000000},
-          zoom: 9
-        });
-//call map window& create marker variable
-        var infowindow = new google.maps.InfoWindow();
-
-    var marker, i;
-
-    for (i = 0; i < locations.length; i++) {  
-      marker = new google.maps.Marker({
-        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-        map: map
-      });
-//add event listener, set markers to individual locations
-      google.maps.event.addListener(marker, "click", (function(marker, i) {
-        return function() {
-          infowindow.setContent(locations[i][0]);
-          infowindow.open(map, marker);
-        }
-      })(marker, i));
-    }
-      }
-		</script>
+		<!--scripts section-->
 
 		<!--Jquery-->
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js"
