--- a/exmoor.html
+++ b/exmoor.html
@@ -99,7 +99,7 @@
 					<section>
 						<h2>Exmoor National Park Map</h2>
 						<br>
-						<div class="map-custom">
+						<div class="exmoor-map-custom">
 						</div>
 					</section>
                     <!--end of map-->
@@ -145,39 +145,7 @@
 					</footer>
                     <!--end of footer-->
 
-					<script>
-						//create location variable& assign latitude& longitude to trail
-						var locations = [
-                        ["Exmoor National Park", 51.040565, -3.5551257]
-                    ];
-                    
-                    var map;
-            //create map object, call id map and add elements to map object such as latitude& longitude
-            //Code adapted from google developer documentation - https://developers.google.com/maps/documentation
-      function initMap() {
-map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
-          center: {lat: 51.180000, lng: -3.000000},
-          zoom: 14
-        });
-                var infowindow = new google.maps.InfoWindow();
-
-    var marker, i;
-//call map window& create marker variable
-    for (i = 0; i < locations.length; i++) {  
-      marker = new google.maps.Marker({
-        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-        map: map
-      });
-//add event listener, set markers to individual locations
-      google.maps.event.addListener(marker, "click", (function(marker, i) {
-        return function() {
-          infowindow.setContent(locations[i][0]);
-          infowindow.open(map, marker);
-        }
-      })(marker, i));
-    }
-      }
-					</script>
+                    <!--scripts-->
 
 					<!--Jquery-->
 					<script src="https://code.jquery.com/jquery-3.5.1.min.js"
