--- a/staple.html
+++ b/staple.html
@@ -101,7 +101,7 @@
 					<section>
 						<h2>Staple Hill Map</h2>
 						<br>
-						<div class="map-custom">
+						<div class="staple-map-custom">
 						</div>
 					</section>
                     <!--end of map-->
@@ -148,39 +148,6 @@
                     <!--end of footer-->
 
 					<!--Scripts-->
-					<script>
-						var locations = [
-                        ["Staple Hill", 50.9445268, -3.0913381, 1]//call map location for marker
-                    ];
-
-						var map;
-            //create map object, call id map and add elements to map object such as latitude& longitude
-            //Code adapted from google developer documentation - https://developers.google.com/maps/documentation
-      function initMap() {
-map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
-          center: {lat: 51.180000, lng: -3.000000},
-          zoom: 14
-        });
-        
-        var infowindow = new google.maps.InfoWindow();
-
-    var marker, i;
-
-    for (i = 0; i < locations.length; i++) {  
-      marker = new google.maps.Marker({
-        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-        map: map
-      });
-
-      google.maps.event.addListener(marker, "click", (function(marker, i) {
-        return function() {
-          infowindow.setContent(locations[i][2]);
-          infowindow.open(map, marker);
-        }
-      })(marker, i));
-    }
-      }
-					</script>
 
 					<!--Jquery-->
 					<script src="https://code.jquery.com/jquery-3.5.1.min.js"
