Update maps html, css and JS syntax, location and formatting

--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -16,17 +16,17 @@
 
 	<title>Cheddar gorge</title>
 
-    	<!--Favicon 32x32-->
+	<!--Favicon 32x32-->
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
-	
-    <!--Favicon 16x16, site icon-->
+
+	<!--Favicon 16x16, site icon-->
 	<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
 </head>
 
 <body>
 
 	<!--navigation top of page, for ease of use. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_topnav.asp-->
-    <nav class="topnav">
+	<nav class="topnav">
 		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
 			<button class="dropbtn">Somerset Trails
@@ -45,7 +45,7 @@
 	<!--end of navigation-->
 
 	<!--cover picture, welcomes user to trail page-->
-    <section class="cheddar-banner">
+	<section class="cheddar-banner">
 		<div class="cheddar-banner-outer">
 			<br>
 			<h4>Explore the best trails one step at a time</h4>
@@ -56,7 +56,7 @@
 	<br>
 
 	<!--Slideshow section, provides user different images of trail -->
-    <div class="container">
+	<div class="container">
 		<div>
 			<br>
 			<h2>Explore Cheddar Gorge below:</h2>
@@ -64,9 +64,9 @@
 </div>
 		</div>
 
-        <br>
+		<br>
 
-        <!--Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_slideshow.asp-->
+		<!--Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_slideshow.asp-->
 
 		<div class="slideshow-container">
 
@@ -96,10 +96,10 @@
 					<!--end of slideshow-->
 
 					<!--Map section, displays trail physical location-->
-                    <section>
+					<section>
 						<h2>Cheddar Gorge Map</h2>
 						<br>
-						<div class="cheddar-map-custom">
+						<div class="map-custom">
 						</div>
 					</section>
 					<!--end of map-->
@@ -107,7 +107,7 @@
 					<br>
 
 					<!--Bottom navigation, for user flexibility. Code adapted from WS3 Schools - https://www.w3schools.com/howto/howto_css_dropup.asp-->
-                    <section class="bottom-nav">
+					<section class="bottom-nav">
 						<h6>Explore our trails</h6>
 						<div class="dropup">
 							<button class="dropbtn">Explore</button>
@@ -127,17 +127,17 @@
 					<br>
 
 					<!--Scroll back to top button. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
-                    <div>
+					<div>
 						<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 					</div>
 					<!--end of scroll button-->
 
 					<!--Footer, inform user the page has ended& provides social media-->
-                    <footer class="footer">
+					<footer class="footer">
 						<div class="align-vertically">
 							<span class="pr-4 ml-auto"><img title="Somerset Trails" class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths"></span>
 							<span class="pr-4-ml-auto"><a href="index.html" title="Home">Home</a></span>
-                            <span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
+							<span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
 						rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
 							<span class="pr-4 ml-auto"><a href="https://twitter.com/explore" title="Twitter" target="_blank"
 						rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
@@ -145,7 +145,40 @@
 					</footer>
 					<!--end of footer-->
 
-                    <!--scripts-->
+					<!--scripts-->
+
+					<script src="script.js" defer>
+						//create locations variable& assigns latitude& longitude to trail
+var locations = [
+    ["Cheddar Gorge", 51.2863881, -2.7690326, 1]
+];
+
+var map;
+//create map object, call id map and add elements to map object
+function initMap() {
+    map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
+        center: { lat: 51.180000, lng: -3.000000 },
+        zoom: 14
+    });
+    //call map window& create marker variable
+    var infowindow = new google.maps.InfoWindow();
+    var marker, i;
+
+    for (i = 0; i < locations.length; i++) {
+        marker = new google.maps.Marker({
+            position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+            map: map
+        });
+        //add event listener& set marker to trail location
+        google.maps.event.addListener(marker, "click", (function (marker, i) {
+            return function () {
+                infowindow.setContent(locations[i][0]);
+                infowindow.open(map, marker);
+            };
+        })(marker, i));
+    }
+}
+					</script>
 
 					<!--Jquery-->
 					<script src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -154,6 +187,9 @@
 
 					<!--Popper-->
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+
+					<!--Google maps script-->
+					<script src="scripts/js/script.js"></script>
 
 					<!--Navigation, slideshow, scroll& text JS-->
 					<script src="scripts/js/app.js"></script>
