--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		<section>
 			<h2>Somerset Map</h2>
 			<br>
-			<div class="home-map-custom">
+			<div class="map-custom">
 			</div>
 		</section>
 		<!--end of map section-->
@@ -172,7 +172,44 @@
 		</footer>
 		<!--end of footer-->
 
-		<!--scripts section-->
+		<!--scripts-->
+		<script src="script.js" defer>
+			//create variable locations, add latitude& longitude to each trail. 
+//All maps coding was adapted from google developer documentation - https://developers.google.com/maps/documentation
+var locations = [
+    ["Exmoor National Park", 51.040565, -3.5551257, 4],
+    ["Somerset Coastal Path", 51.2072165, -3.4641482, 5],
+    ["Staple Hill", 50.9445268, -3.0913381, 3],
+    ["Blagdon Lake", 51.3348101, -2.7040838, 2],
+    ["Cheddar Gorge", 51.2863881, -2.7690326, 1]
+];
+var map;
+//create map object, call id map and add elements to map object such as latitude& longitude
+function initMap() {
+    map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
+        center: { lat: 51.180000, lng: -3.000000 },
+        zoom: 9
+    });
+    //call map window& create marker variable
+    var infowindow = new google.maps.InfoWindow();
+
+    var marker, i;
+
+    for (i = 0; i < locations.length; i++) {
+        marker = new google.maps.Marker({
+            position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+            map: map
+        });
+        //add event listener, set markers to individual locations
+        google.maps.event.addListener(marker, "click", (function (marker, i) {
+            return function () {
+                infowindow.setContent(locations[i][0]);
+                infowindow.open(map, marker);
+            };
+        })(marker, i));
+    }
+}
+		</script>
 
 		<!--Jquery-->
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -181,7 +218,10 @@
 		<!--Popper-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-		<!--Navigation, slideshow, scroll& text JS-->
+		<!--Google maps script-->
+		<script src="scripts/js/script.js" 
+        
+        <!--Navigation, slideshow, scroll& text JS-->
 		<script src="scripts/js/app.js"></script>
 
 		<!--Bootstrap, for footer icon positioning-->
