--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -16,17 +16,17 @@
 
 	<title>Somerset Coastal Path</title>
 
-    	<!--Favicon 32x32-->
+	<!--Favicon 32x32-->
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
-	
-    <!--Favicon 16x16, site icon-->
+
+	<!--Favicon 16x16, site icon-->
 	<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
 </head>
 
 <body>
 
 	<!--Navigation, fixed at the top of page for ease of use. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_topnav.asp-->
-    <nav class="topnav">
+	<nav class="topnav">
 		<a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
 		<div class="dropdown">
 			<button class="dropbtn">Somerset Trails
@@ -42,21 +42,21 @@
 		</div>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	</nav>
-    <!--end of navigation-->
+	<!--end of navigation-->
 
 	<!--cover picture welcomes user to page-->
-    <section class="coastal-banner">
+	<section class="coastal-banner">
 		<div class="coastal-banner-outer">
 			<br>
 			<h4>Explore the best trails one step at a time</h4>
 		</div>
 	</section>
-    <!--end of banner-->
+	<!--end of banner-->
 
 	<br>
 
 	<!--Slideshow section, provides user with images of trail-->
-    <div class="container">
+	<div class="container">
 		<div>
 			<br>
 			<h2>Explore the Somerset Coastal Path below:</h2>
@@ -64,11 +64,11 @@
 </div>
 		</div>
 
-        <br>
+		<br>
 
-        <!--Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_slideshow.asp-->
-        
-        <div class="slideshow-container">
+		<!--Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_slideshow.asp-->
+
+		<div class="slideshow-container">
 
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 3</div>
@@ -93,7 +93,7 @@
 						<span class="dot"></span>
 						<span class="dot"></span>
 					</div>
-                    <!--end of slideshow-->
+					<!--end of slideshow-->
 
 					<!--Map section, displays physical trail location-->
 					<section>
@@ -102,12 +102,12 @@
 						<div class="somerset-map-custom">
 						</div>
 					</section>
-                    <!--end of map-->
+					<!--end of map-->
 
-                    <br>
+					<br>
 
 					<!--Bottom navigation for increased user flexibility. Code adapted from WS3 Schools - https://www.w3schools.com/howto/howto_css_dropup.asp-->
-                    <section class="bottom-nav">
+					<section class="bottom-nav">
 						<h6>Explore our trails</h6>
 						<div class="dropup">
 							<button class="dropbtn">Explore</button>
@@ -121,30 +121,64 @@
 						</div>
 						<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 					</section>
-                    <!--end of bottom navigation-->
+					<!--end of bottom navigation-->
 
 					<br>
 
 					<!--Scroll back to top button. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
-                    <div>
+					<div>
 						<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 					</div>
-                    <!--end of scroll button-->
+					<!--end of scroll button-->
 
 					<!--Footer section, display social media& informs viewer they have reached end of page-->
-                    <footer class="footer">
+					<footer class="footer">
 						<div class="align-vertically">
 							<span class="pr-4 ml-auto"><img title="Somerset Trails" class="logo" src="https://cdn.pixabay.com/photo/2015/05/15/14/53/woods-768753_960_720.jpg" alt="Trail paths"></span>
 							<span class="pr-4-ml-auto"><a href="index.html" title="Home">Home</a></span>
-                            <span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
+							<span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
 						rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
 							<span class="pr-4 ml-auto"><a href="https://twitter.com/explore" title="Twitter" target="_blank"
 						rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
 						</div>
 					</footer>
-                    <!--end of footer-->
+					<!--end of footer-->
 
 					<!--Scripts-->
+					<script src="script.js" defer>
+						/*Somerset coastal path map*/
+//create variable locations, add latitude& longitudes to trail
+var locations = [
+    ["Somerset Coastal Path", 50.215696, -5.4903855, 1]//call map location for marker
+];
+
+var map;
+//create map object, call id map and add elements to map object such as latitude& longitude. 
+function initMap() {
+    map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
+        center: { lat: 51.180000, lng: -3.000000 },
+        zoom: 14
+    });
+
+    var infowindow = new google.maps.InfoWindow();
+
+    var marker, i;
+
+    for (i = 0; i < locations.length; i++) {
+        marker = new google.maps.Marker({
+            position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+            map: map
+        });
+
+        google.maps.event.addListener(marker, "click", (function (marker, i) {
+            return function () {
+                infowindow.setContent(locations[i][0]);
+                infowindow.open(map, marker);
+            };
+        })(marker, i));
+    }
+}
+					</script>
 
 					<!--Jquery library-->
 					<script src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -153,6 +187,9 @@
 
 					<!--Popper-->
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+
+					<!--Google maps script-->
+					<script src="scripts/js/script.js"></script>
 
 					<!--Navigation, slideshow, scroll& text JS-->
 					<script src="scripts/js/app.js"></script>
