--- a/staple.html
+++ b/staple.html
@@ -101,7 +101,7 @@
 					<section>
 						<h2>Staple Hill Map</h2>
 						<br>
-						<div class="staple-map-custom">
+						<div class="map-custom">
 						</div>
 					</section>
 					<!--end of map-->
@@ -148,19 +148,47 @@
 					<!--end of footer-->
 
 					<!--Scripts-->
-					<script src="script.js" defer>
-						var locations = [
-    ["Staple Hill", 50.9445268, -3.0913381, 1]//call map location for marker
-];
-
-var map;
+					<script src="scripts/js/script.js" defer>
+                    var map;
 //create map object, call id map and add elements to map object such as latitude& longitude
 function initMap() {
-    map = new google.maps.Map(document.getElementsByClassName("staple-map-custom")[0], {
+    map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
         center: { lat: 51.180000, lng: -3.000000 },
         zoom: 14
     });
 
+        //plotting the markers
+    fetch("scripts/js/markers.json")
+    .then(function(response){return response.json()})
+    .then(plotMarkers);
+}
+
+var markers;
+var bounds;
+
+function plotMarkers(m)
+{
+  markers = [];
+  bounds = new google.maps.LatLngBounds();
+
+  m.forEach(function (marker) {
+    var position = new google.maps.LatLng(marker.lat, marker.lng);
+
+    markers.push(
+      new google.maps.Marker({
+        position: position,
+        map: map,
+        animation: google.maps.Animation.DROP
+      })
+    );
+
+    bounds.extend(position);
+  });
+
+  map.fitBounds(bounds);
+}
+
+    //call map window& create marker info - title of marker
     var infowindow = new google.maps.InfoWindow();
 
     var marker, i;
@@ -189,20 +217,11 @@ function initMap() {
 					<!--Popper-->
 					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-					<!--Google maps script-->
-					<script src="scripts/js/script.js"></script>
-
 					<!--Navigation, slideshow, scroll& text JS-->
 					<script src="scripts/js/app.js"></script>
 
 					<!--Bootstrap, for footer icon positioning-->
 					<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-
-					<!--Google maps scripts-->
-
-					<script async defer
-						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
-					</script>
 </body>
 
 </html>
