Append script.js to html script instead of head& update html syntax

--- a/exmoor.html
+++ b/exmoor.html
@@ -150,7 +150,7 @@
 					<script src="scripts/js/script.js" defer>
 
 var map;
-//create map object, call id map and add elements to map object such as latitude& longitude
+//create map object, call id map and add elements to map object - latitude& longitude
 function initMap() {
     map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
         center: { lat: 51.180000, lng: -3.000000 },
