--- a/blagdon.html
+++ b/blagdon.html
@@ -149,7 +149,7 @@
 					<script src="scripts/js/script.js" defer>
                     
                     var map;
-//create map object, call map and add elements to map object such as latitude& longitude
+//create map object, call map and add elements to map object such as latitude& longitude.
 function initMap() {
     map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
         center: { lat: 51.180000, lng: -3.000000 },
