--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="x-ua-compatible" content="IE=edge">
+
 	<!--WS3 Css, provide slideshow animation-->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
@@ -173,8 +175,8 @@
 		<!--end of footer-->
 
 		<!--scripts-->
-		<script src="scripts/js/script.js" defer> 
-//All maps coding was adapted from google developer documentation - https://developers.google.com/maps/documentation
+		<script>
+			//All maps coding was adapted from google developer documentation - https://developers.google.com/maps/documentation
 
 var map;
 //create map object, call map and add elements to map object such as latitude& longitude
@@ -233,7 +235,6 @@ function plotMarkers(m)
             };
         })(marker, i));
     }
-}
 		</script>
 
 		<!--Jquery-->
@@ -248,6 +249,11 @@ function plotMarkers(m)
 
 		<!--Bootstrap, for footer icon positioning-->
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+		<!--Map API key-->
+		<script async defer
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
+		</script>
 </body>
 
 </html>
