--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="x-ua-compatible" content="IE=edge">
 
 	<!--WS3 Css, provides slideshow animation-->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -145,8 +146,8 @@
 					<!--end of footer-->
 
 					<!--Scripts-->
-					<script src="scripts/js/script.js" defer>
-var map;
+					<script>
+						var map;
 //create map object, call map and add elements to map object - latitude& longitude. 
 function initMap() {
     map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
@@ -203,7 +204,6 @@ function plotMarkers(m)
             };
         })(marker, i));
     }
-}
 					</script>
 
 					<!--Jquery library-->
@@ -219,6 +219,11 @@ function plotMarkers(m)
 
 					<!--Bootstrap, for footer icon positioning-->
 					<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+					<!--Map API key-->
+					<script async defer
+						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
+					</script>
 </body>
 
 </html>
