--- a/exmoor.html
+++ b/exmoor.html
@@ -102,15 +102,18 @@
     <div>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
-    <!--footer section, social media and inform user that the page has ended-->
+    <!--Footer section, display social media& informs viewer they have reached end of page-->
     <footer class="footer">
       <div class="align-vertically">
-        <span class="pr-4 ml-auto"><img title="Somerset Trails" class="logo" src="https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg" alt="Site logo"></span>
-        <span class="pr-4-ml-auto"><a href="index.html" title="Home">Home</a></span>
-        <span class="pr-4 ml-auto"><a href="https://www.facebook.com/" title="Facebook" target="_blank"
-          rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
-        <span class="pr-4 ml-auto"><a href="https://twitter.com/explore" title="Twitter" target="_blank"
-          rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
+        <div class="other-trails">
+          <span><img title="Somerset Trails" class="logo" src="https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg" alt="Site logo"></span>
+          <span><a href="index.html" title="Home" target="_blank" 
+            rel="noopener"><i class="fa fa-home"></i></a></span>
+          <span><a href="https://www.facebook.com/" title="Facebook" target="_blank"
+            rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
+          <span><a href="https://twitter.com/explore" title="Twitter" target="_blank"
+            rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
+        </div>
       </div>
     </footer>
     <!--scripts-->
@@ -149,12 +152,8 @@
     <!--Jquery-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!--Popper-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <!--Navigation, slideshow, scroll& text JS-->
     <script src="scripts/js/app.js"></script>
-    <!--Bootstrap, for footer icon positioning-->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <!--Map API key-->
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap"></script>
