Update home icon in footer& modify app.js

--- a/exmoor.html
+++ b/exmoor.html
@@ -107,7 +107,7 @@
       <div class="align-vertically">
         <div class="other-trails">
           <span><img title="Somerset Trails" class="logo" src="https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg" alt="Site logo"></span>
-          <span><a href="index.html" title="Home" target="_blank" 
+          <span><a href="index.html" title="Home"
             rel="noopener"><i class="fa fa-home"></i></a></span>
           <span><a href="https://www.facebook.com/" title="Facebook" target="_blank"
             rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
