--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Favicon 32x32-->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <!--Favicon 16x16, site icon-->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <link id="favicon" rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
   </head>
   <body>
     <!--Navigation, at the top of page for ease of use. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_topnav.asp-->
@@ -132,7 +132,7 @@
       <div class="align-vertically">
         <div class="other-trails">
           <span><img title="Somerset Trails" class="logo" src="https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg" alt="Site logo"></span>
-          <span><a href="index.html" title="Home" target="_blank" 
+          <span><a href="index.html" title="Home"
             rel="noopener"><i class="fa fa-home"></i></a></span>
           <span><a href="https://www.facebook.com/" title="Facebook" target="_blank"
             rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
