Add latest jquery cdn for favicon

--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
+    <!--provide far future to favicon-->
+    <link href=http://code.jquery.com/jquery-latest.min.js>
     <!--WS3 Css, provides slideshow animation-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!--font awesome, provides social media icons-->
