--- a/staple.html
+++ b/staple.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
-    <!--provide far future to favicon-->
-    <link href=http://code.jquery.com/jquery-latest.min.js>
     <!--WS3 Css, add slideshow animation-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!--font awesome, provides social media icons-->
@@ -155,6 +153,8 @@
     <!--Jquery-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!--add far future to favicon-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Navigation, slideshow, scroll& text JS-->
     <script src="scripts/js/app.js"></script>
     <!--Map API key-->
